# aospdtgen

./: .gitignore  README.md  REUSE.toml  device_tree.py  package-lock.json  package.json  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/workflows/: checks.yml
DTree/: Android.bp  Android.mk  AndroidProducts.mk  BoardConfig.mk  README.md  device.mk  extract-files.sh  lineage_ossi.mk  manifest.xml  product.prop  proprietary-files.txt  setup-makefiles.sh  system.prop  system_dlkm.prop  vendor.prop
DTree/rootdir/: Android.bp  Android.mk
aospdtgen/: __init__.py  __main__.py  device_tree.py  devicetree.py  main.py
aospdtgen/proprietary_files/: elf.py  get_vndk_libs.py  ignore.py  proprietary_files_list.py  section.py
aospdtgen/templates/: AndroidProducts.mk.jinja2  BoardConfig.mk.jinja2  LICENSE.jinja2  __init__.py  device.mk.jinja2  extract-files.py.jinja2  extract-files.sh.jinja2  lineage_device.mk.jinja2  rootdir_Android.bp.jinja2  setup-makefiles.py.jinja2  setup-makefiles.sh.jinja2
aospdtgen/utils/: boot_configuration.py  device_info.py  format_props.py  fstab.py  ignored_props.py  logging.py  partition.py  partitions.py  reorder.py  vintf.py
proprietary_files/: elf.py  ignore.py  proprietary_files_list.py  section.py
proprietary_files/sections/: acdb.py  adsp.py  alarm.py  ant.py  atrace.py  automotive.py  bluetooth.py  boot.py  broadcastradio.py  cas.py  cdsp.py  cit.py  cne.py  configstore.py  confirmationui.py  contexthub.py  cvp.py  display.py  dpm.py  drm.py  dumpstate.py  face.py  fastboot.py  fingerprint.py  fm.py  gatekeeper.py  gnss.py  (+34 more)
templates/: device.mk.jinja2  lineage_device.mk.jinja2  rootdir_Android.mk.jinja2  setup-makefiles.py.jinja2
utils/: boot_configuration.py  format_props.py  ignored_props.py
(+105 files in other folders)
