[tool.poetry]
name = "aospdtgen"
version = "1.1.0"
description = "Create an Android device tree from a device dump"
authors = ["Sebastiano Barezzi <seba@sebaubuntu.dev>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sebaubuntu-python/aospdtgen"

[tool.poetry.scripts]
aospdtgen = 'aospdtgen.main:main'

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.1.2"
GitPython = "^3.1.31"
sebaubuntu-libs = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
