[tool.poetry]
name = "aospdtgen"
version = "1.3.0"
description = "Create an Android device tree from a device dump"
authors = ["DestoryG <numbersans97@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/DestoryG/aospdtgen"

[tool.poetry.scripts]
aospdtgen = 'aospdtgen.main:main'

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1.6"
GitPython = "^3.1.45"
sebaubuntu-libs = "^1.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
